--- a/Developer/ProgrammingGuide/cover.tex
+++ b/Developer/ProgrammingGuide/cover.tex
@@ -7,10 +7,11 @@
 \usepackage[absolute]{textpos}
 
 \geometry{papersize={1227.62pt,860pt}}
+\geometry{papersize={1261.26pt,810pt}}
 
 \newcommand{\boxwidth}{5in}
-\newcommand{\spacewidth}{604pt}
-\newcommand{\spinewidth}{19.62pt}
+\newcommand{\spacewidth}{621pt}
+\newcommand{\spinewidth}{19.264pt}
 
 \setlength{\evensidemargin}{39.76274pt}
 \setlength{\oddsidemargin}{39.76274pt}
@@ -22,37 +23,37 @@
 \begin{document}
 \thispagestyle{empty}
 
-\begin{textblock}{}(16.01,4.42)
+\begin{textblock}{}(16.48,3.92)
   \begin{rotate}{270}
-    \setlength{\fboxsep}{5pt} 
+    \setlength{\fboxsep}{9.4pt} 
     \colorbox{red}{\textsf{\bfseries\LARGE\textcolor{white}{{\hspace{12pt}Equalizer
             Programming and User Guide\hspace{12pt}}}}}
   \end{rotate}
 \end{textblock}
 
-\begin{textblock}{}(15.9,15)
-  {\Large 1.0}
+\begin{textblock}{}(16.38,13)
+  {\Large 1.2}
 \end{textblock}
 
-\vfill
 \parbox[t]{\spacewidth}{\hfill}
 \parbox[t]{\boxwidth}{
+\vspace{-32pt}
   \center
   \textsf{\textbf{\huge Equalizer\\Programming and User Guide}}\\[\bigskipamount]
-  {\Large Eyescale Software GmbH}
+  {\Large Eyescale Software GmbH}\\
 }\\
 \vfill
+\vspace{32pt}
 \hspace{-128pt}
-  \includegraphics[width=604pt]{images/teaserBack.pdf}
+  \includegraphics[width=\spacewidth]{images/teaserBack.pdf}
   \hspace{\spinewidth}
-  \includegraphics[width=604pt]{images/teaser.pdf}
+  \includegraphics[width=\spacewidth]{images/teaser.pdf}
 \\
 \vfill
 \parbox[t]{\spacewidth}{\hfill}
 \parbox[t]{\boxwidth}{ \center{\Large The official reference for developing and
     deploying parallel, scalable OpenGL\texttrademark\ applications
     based on the Equalizer parallel rendering framework }\\\vspace{1cm}
-  {\Large Revision 1.8 for Equalizer 1.0}\\[\medskipamount]
+  {\Large Revision 1.10 for Equalizer 1.2}\\[\medskipamount]
 }
-
 \end{document}
