--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -48,13 +48,13 @@ Equalizer 1.2\\Programming and User Guide}
 \begin{document}
 
 \pagestyle{empty}
-\maketitle
+%\maketitle
 \thispagestyle{empty}
 
 \clearpage
 
 \lstset{language=C++}
-\section*{Equalizer 1.2 Programming and User Guide}
+\section*{Equalizer Programming and User Guide}
 \today
 \subsection*{Contributors}
 
@@ -2800,7 +2800,7 @@ widget sets such as Qt.
 
 \begin{wrapfigure}{r}{.382\textwidth}
   \vspace{-2ex}\includegraphics[width=.382\textwidth]{images/eventFilter.pdf}
-  {\caption{\label{fEventProcessing}Event Processing}}\vspace{-4ex}
+  {\caption{\label{fEventProcessing}Event Processing}}
 \end{wrapfigure}
 Events are received by an event handler. The event handler finds the
 \textsf{eq::Sys\-tem\-Win\-dow} associated to the event. It then creates a
