Post-release cleanup

--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -15,21 +15,21 @@
   \usepackage{hyperref}
 \fi
 
-\title{\vspace{7cm}
-Equalizer 1.2\\Programming and User Guide}
+\title{
+Equalizer\\Programming and User Guide}
 \author{Eyescale Software GmbH}
 
-%\date{
-%  \vspace{14cm}
-%  \begin{textblock}{}(0,4.5)
-%    \hspace{-1cm}\includegraphics[width=22cm]{images/teaser.pdf}
-%  \end{textblock}
-%      {\Large The official reference for developing and
-%        deploying parallel, scalable OpenGL\texttrademark\ applications using
-%        the Equalizer parallel rendering framework}\\\vspace{1cm}
-%      Version 1.10 for Equalizer 1.2\\[\medskipamount]
-%  \today
-%}
+\date{
+  \vspace{14cm}
+  \begin{textblock}{}(0,4.5)
+    \hspace{-1cm}\includegraphics[width=22cm]{images/teaser.pdf}
+  \end{textblock}
+      {\Large The official reference for developing and
+        deploying parallel, scalable OpenGL\texttrademark\ applications using
+        the Equalizer parallel rendering framework}\\\vspace{1cm}
+      Version 1.10 for Equalizer 1.2\\[\medskipamount]
+  \today
+}
 
 \newcommand{\tm}{\texttrademark~}
 \newcommand{\rc}{\raise 1ex\hbox{{\tiny\textregistered}}~}
@@ -48,7 +48,7 @@ Equalizer 1.2\\Programming and User Guide}
 \begin{document}
 
 \pagestyle{empty}
-%\maketitle
+\maketitle
 \thispagestyle{empty}
 
 \clearpage
@@ -5506,10 +5506,10 @@ the same pipe.
 {\footnotesize\lstinputlisting[firstline=262, lastline=333]
   {../../../equalizergraphics.com/documents/design/fileFormat.shtml}}
 
-%\cleardoublepage
-%\pagestyle{empty}
-%\begin{textblock}{}(0,4.5)
-%  \hspace{-1cm}\includegraphics[width=22cm]{images/teaserBack.pdf}
-%\end{textblock}
+\cleardoublepage
+\pagestyle{empty}
+\begin{textblock}{}(0,4.5)
+  \hspace{-1cm}\includegraphics[width=22cm]{images/teaserBack.pdf}
+\end{textblock}
 
 \end{document}
